--- a/app/src/main/res/layout/activity_list_item.xml
+++ b/app/src/main/res/layout/activity_list_item.xml
@@ -5,19 +5,17 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
         app:srcCompat="@drawable/medicamento"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:adjustViewBounds="true"
         android:id="@+id/img" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/img"
         android:layout_toEndOf="@+id/img"
         android:id="@+id/nombre" />
