--- a/app/src/main/res/layout/activity_list_product_activity.xml
+++ b/app/src/main/res/layout/activity_list_product_activity.xml
@@ -25,6 +25,15 @@
         android:layout_below="@id/search_product"
         android:id="@android:id/list"/>
 
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/search_product"
+        android:layout_toEndOf="@+id/search_product"
+        android:id="@+id/addBtn" />
+
     <!--Imprescindible si utilizas ListActivity -->
 
 </RelativeLayout>
