--- a/app/src/main/res/layout/activity_manage_product.xml
+++ b/app/src/main/res/layout/activity_manage_product.xml
@@ -128,6 +128,16 @@
         android:layout_toRightOf="@id/imageTxt"
         android:id="@+id/imageEdt" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true">
+
+        <include layout="@layout/btn_add"/>
+
+    </LinearLayout>
+
     <Button
         android:text="add"
         android:layout_width="wrap_content"
